--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-.DS_STORE
-/.settings/
-/dist/
+#Mac OSX
+.DS_STORE*
+Thumbs.db
+
+#NetBeans
+*.class
+.settings/
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
